[gd_scene load_steps=10 format=3 uid="uid://6gr24n0d2p2r"]

[ext_resource type="Texture2D" uid="uid://0lv2h4wsb5p4" path="res://Sprites/UI/MenuBackgrounds/BaseMenuBackground.png" id="1_effct"]
[ext_resource type="Script" uid="uid://c2eooavhr445x" path="res://Scripts/UI/SelectWeaponUI.gd" id="1_sly1o"]
[ext_resource type="FontFile" uid="uid://cei85tmgnaxi7" path="res://Fonts/fusion-pixel-monospaced.ttf" id="2_kcmil"]
[ext_resource type="Texture2D" uid="uid://d3x5di24swn5j" path="res://Sprites/UI/MenuBackgrounds/DarkMenuBackground.png" id="3_qtnpp"]
[ext_resource type="PackedScene" uid="uid://cyv77kdkovsyp" path="res://Scenes/UI/FingerUI.tscn" id="5_qtnpp"]
[ext_resource type="Texture2D" uid="uid://dd0d1hs1cu3l8" path="res://Sprites/Characters/PlayerCharacters/EirikaPortrait.png" id="6_bq61b"]
[ext_resource type="Texture2D" uid="uid://brfsocdkt125r" path="res://Sprites/Items/wexp_icons_0.tres" id="7_akecf"]
[ext_resource type="Material" uid="uid://dsnt3deoqnr82" path="res://Shader/SpriteRemoveColorGreen.tres" id="7_yng6j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yng6j"]
atlas = ExtResource("6_bq61b")
region = Rect2(0, 0, 96, 80)

[node name="SelectWeaponUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sly1o")
metadata/_edit_horizontal_guides_ = [160.0]
metadata/_edit_vertical_guides_ = [240.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 95.0
offset_bottom = 22.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("1_effct")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="FingerUI" parent="." instance=ExtResource("5_qtnpp")]
offset_left = 9.0
offset_top = 24.0
offset_right = 9.0
offset_bottom = 24.0

[node name="WeaponItemTemplate" type="MarginContainer" parent="."]
visible = false
custom_minimum_size = Vector2(0, 15)
layout_mode = 0
offset_right = 80.0
offset_bottom = 15.0
size_flags_vertical = 3

[node name="Control" type="Control" parent="WeaponItemTemplate"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="WeaponItemTemplate/Control"]
layout_mode = 1
offset_left = 6.0
offset_top = -5.0
offset_right = 30.0
offset_bottom = 19.0
scale = Vector2(0.67, 0.67)
pivot_offset = Vector2(0, 12)
texture = ExtResource("3_qtnpp")

[node name="WeaponName" type="Label" parent="WeaponItemTemplate/Control"]
layout_mode = 0
offset_left = 23.0
offset_top = -1.0
offset_right = 55.0
offset_bottom = 15.5
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 9
text = "铁剑"
vertical_alignment = 1

[node name="Uses" type="Label" parent="WeaponItemTemplate/Control"]
layout_mode = 0
offset_left = 60.0
offset_top = -2.0
offset_right = 76.0
offset_bottom = 14.5
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_kcmil")
text = "99"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 108.0
offset_top = 9.0
offset_right = 148.0
offset_bottom = 49.0

[node name="UnitTexture" type="TextureRect" parent="Control"]
material = ExtResource("7_yng6j")
layout_mode = 0
offset_left = 7.0
offset_right = 103.0
offset_bottom = 80.0
texture = SubResource("AtlasTexture_yng6j")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 7.0
offset_top = 80.0
offset_right = 107.0
offset_bottom = 135.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_effct")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Title" type="Label" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_top = 5.0
offset_right = 3.0
offset_bottom = 21.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 10
text = "属性"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 0
offset_left = 57.0
offset_top = 4.0
offset_right = 73.0
offset_bottom = 20.0
texture = ExtResource("7_akecf")

[node name="AttackTitle" type="Label" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 19.0
offset_right = -20.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 8
text = "攻击"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackValue" type="Label" parent="Control/MarginContainer/NinePatchRect/AttackTitle"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 9.0
offset_right = 33.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 8
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitTitle" type="Label" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 31.0
offset_right = -20.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 8
text = "命中"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitValue" type="Label" parent="Control/MarginContainer/NinePatchRect/HitTitle"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 9.0
offset_right = 33.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 8
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CritTitle" type="Label" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1.0
offset_top = 19.0
offset_right = 25.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 8
text = "必杀"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CritValue" type="Label" parent="Control/MarginContainer/NinePatchRect/CritTitle"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 9.0
offset_right = 33.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 8
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MissTitle" type="Label" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1.0
offset_top = 31.0
offset_right = 25.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 8
text = "回避"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MissValue" type="Label" parent="Control/MarginContainer/NinePatchRect/MissTitle"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 9.0
offset_right = 33.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kcmil")
theme_override_font_sizes/font_size = 8
text = "99"
horizontal_alignment = 1
vertical_alignment = 1
